fixed alignment problem for askInfo table in L2_J_Korea

--- a/experiment/exp_versions/L2_J_Korea/style.css
+++ b/experiment/exp_versions/L2_J_Korea/style.css
@@ -124,10 +124,6 @@ button[disabled] {
     line-height:26px;
 }
 
-td {
-  text-align: center;
-  width: 60px;
-}
 
 #form {
     text-align: center;
